# Claude-AI

./: .env.example  .gitignore  README.md  mcp_server.py  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  dev-a50-frontend.md  dev-android-kotlin.md  dev-android.md  dev-orchestrator.md  dev-springboot.md  jira-analyst.md
.claude/docs.example/: README.md
.claude/docs.example/conventions/: android-java.md  android-kotlin-compose.md  android-kotlin-migration.md  react-mobx.md  springboot-mybatis.md
.claude/docs.example/infra/: cloud-deployment.md  embedded-docker.md
.claude/docs.example/projects/: android-app.md  embedded-hmi.md  kotlin-compose-app.md  springboot-api.md
.claude/docs.example/review-checklists/: android.md  common.md  frontend.md  springboot.md
.claude/docs.example/security/: jwt.md  secret-handling.md
hooks/: filter_jira.py
tools/: __init__.py  file_tools.py  jira_tools.py
