[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-ai"
version = "0.1.0"
description = "Jira MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "jira>=3.8.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
